--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,5 +1,4 @@
 
-@import '../base';
 
 
 body{background-color: #606060;
@@ -43,7 +42,6 @@ font-size: 3rem;}
     align-items: center;}
 
 .buscador {display: flex;
-    @include display-flex($justify: left);
     gap: 5px;
     align-self: self-start;
     margin-top: 60px;
@@ -78,6 +76,39 @@ margin-right: 100px;
 margin-top: auto;}
 
 .titulo-destacados{ text-align: center;}
+
+
+.carousel {
+    overflow: hidden;
+    width: 100%;
+}
+
+.contenedor-img {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.articulo1 {
+    flex: 0 0 300px;
+    margin-right: 20px;
+}
+
+// Añadir estilos a las imágenes dentro del carrusel
+.imagen-articulo1,
+.imagen-articulo2 {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+// Estilos para los títulos y párrafos
+.titulo-imagen-1,
+.parrafo1 {
+    text-align: center;
+}
+
+
+
 
 .contenedor-img {
     overflow: hidden;
@@ -118,7 +149,6 @@ margin-right: 90px;}
 
 
 main {
-    @include display-flex($direction: column);
     align-content: center;}
 
 
@@ -159,3 +189,7 @@ h3 {
     flex-direction: column;
     }
 }
+
+
+
+
