--- a/scss/pages/_pisos.scss
+++ b/scss/pages/_pisos.scss
@@ -1,7 +1,7 @@
 @import '../base';
 
-.contenedor {
-    border: 1px solid #ccc;
+.card-container  {
+    background-color: #606060;
     border-radius: 8px;
     padding: 10px;
     width: 300px;
@@ -10,7 +10,7 @@
     text-align: center;
 }
 
-.img-pisos {
+.card-img-pisos {
     width: 100%;
     height: auto;
     border-radius: 8px;
@@ -20,7 +20,7 @@
     margin-top: 10px;
 }
 
-.detalle {
+.card-text {
     text-align: left;
     font-size: 14px;
     line-height: 1.5;
