--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ h2 {font-family: 'REM', sans-serif;
 }
 
 
+
 .botones {
   margin-left: 60px;
   margin-right: 60px;
@@ -213,7 +214,7 @@ h3 {
 
 .nav-list a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 /*body*/
@@ -234,78 +235,7 @@ h3 {
   width: 100%;
 }
 
-.contenedor-img {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-}
-
-.articulo1 {
-  flex: 0 0 300px;
-  margin-right: 20px;
-}
-
-.imagen-articulo1,
-.imagen-articulo2 {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.titulo-imagen-1,
-.parrafo1 {
-  text-align: center;
-}
-
-.contenedor-img {
-  overflow: hidden;
-}
-
-.contenedor-img img {
-  transition: transform 0.3s ease;
-}
-
-.contenedor-img:hover img {
-  transform: scale(1.1);
-}
-
-.imagen-articulo1 {
-  position: relative;
-  width: 300px;
-}
-
-.titulo-imagen-1 {
-  text-decoration: underline;
-  margin-left: 10px;
-}
-
-.articulo1 {
-  margin-left: 50px;
-  margin-right: 800px;
-}
-
-.contenedor-img {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-
-.articulo1 {
-  text-align: center;
-  margin: 10px;
-}
-
-.articulo1 img {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-}
-
-.parrafo1 {
-  margin-left: 90px;
-  margin-right: 90px;
-}
-
+.card-group{margin-left: 100px;}
 main {
   align-content: center;
 }
