--- a/scss/pages/_pisos.scss
+++ b/scss/pages/_pisos.scss
@@ -1,40 +1,57 @@
-@import '../base';
-
-.card-container  {
-    background-color: #606060;
-    border-radius: 8px;
-    padding: 10px;
-    width: 300px;
-    max-width: 100%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
+.carousel-inner {
+    border: 1px solid none;
+    border-radius: 5px;
+    overflow: hidden;
 }
 
-.card-img-pisos {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
+.carousel-item img {
+    margin-left: 520px;
+    margin-right: 400px;
+    margin-bottom: 100px;
+    width: auto;
+    height: 600px; 
+    object-fit: cover;
+    display: flex
+    ;
 }
 
-.botones {
-    margin-top: 10px;
-}
-
-.card-text {
-    text-align: left;
-    font-size: 14px;
-    line-height: 1.5;
-}
-
-.botones {
-    margin: 5px;
-    padding: 8px 16px;
+.carousel-control-prev,
+.carousel-control-next {
+    font-size: 20px;
+    color: #0f0f0f;
+    background-color: #0c0c0c;
     border: none;
-    border-radius: 4px;
-    color: white;
-    cursor: pointer;
-    font-size: 14px;
-    text-transform: uppercase;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 350px;
+    margin-right: 250px;
+    margin-top: 250px;
 }
+
+.carousel-control-prev:hover,
+.carousel-control-next:hover {
+    background-color:none
+    ;
+    margin-bottom: 500px;
+}
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    background-color: transparent;
+    border: none;;
+}
+
+
+.carousel-control-prev-icon::before,
+.carousel-control-next-icon::before {
+    font-size: 30px;
+}
+
+
+
+
 
 
