--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,9 @@ h2 {font-family: 'REM', sans-serif;
   font-family: 'Roboto Slab', serif;
   font-family: 'Ysabeau SC', sans-serif;
   font-size: 40px;
-  margin-left: 100px;
+  margin-left: 50px;
   margin-top: 50px;
+  margin-bottom: 10px;
 }
 
 
@@ -38,36 +39,7 @@ h2 {font-family: 'REM', sans-serif;
     margin: 3px 0;
   }
 }
-.botones {
-  margin-left: 60px;
-  margin-right: 60px;
-}
 
-.contenedor {
-  display: grid;
-  grid-template-columns: 400px auto;
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
-
-.titulo-pisos {
-  margin-left: 100px;
-}
-
-.img-pisos {
-  margin-left: 90px;
-}
-
-.contenedor-img {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.articulo1 {
-  flex-basis: calc(33.33% - 20px);
-  margin-bottom: 20px;
-}
 
 @media (min-width: 1023px) {
   .bloque1 {
@@ -148,6 +120,7 @@ body {
 h3 {
   margin-left: 100px;
   margin-bottom: 10px;
+  margin-right: 100px;
 }
 
 /* header */
@@ -233,6 +206,7 @@ h3 {
 
 .titulo-destacados {
   text-align: center;
+
 }
 
 .carousel {
@@ -252,20 +226,22 @@ main {
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-top: 100px;
 }
 
 
 
 .qr {
   width: 100%;
-  max-width: 150px;
+  max-width: 200px;
   height: auto;
+  margin-top: 50px;
 }
 
 
 
 .contenedor-mapa > div {
-  margin: 10px;
+  margin-right: 15px;
 }
 
 @media screen and (max-width: 767px) {
@@ -285,6 +261,17 @@ body {
   margin-left: 100px;
 }
 
+
+.col {margin-left: 100px;
+      margin-bottom: 50px;
+  }
+
+.card-title {text-decoration:underline;}
+
+.card-text {font-size:5;font-weight: bolder;}
+
+
+
 body {
   background-color: #606060;
   font-family: "roboto slab";
@@ -299,9 +286,9 @@ body {
 }
 
 .carousel-item img {
-  margin-left: 520px;
+  margin-left: 320px;
   margin-right: 400px;
-  margin-bottom: 100px;
+  margin-bottom: 90px;
   width: auto;
   height: 600px; 
   object-fit: cover;
@@ -321,8 +308,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 350px;
-  margin-right: 250px;
+  margin-left: 200px;
+  margin-right: 150px;
   margin-top: 250px;
 }
 
@@ -347,11 +334,94 @@ body {
 
 .consulta {margin-right: 400px;}
 
+.form-contacto { padding: 50px 55px;
+      box-shadow: blue;
+    border-radius: 20px;
+  text-align: center;
+width: 340px;
+margin-left: 200px;
+list-style-type: none;
+display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.consulta {display: flex;
+flex-direction: column;
+text-align: left;
+color: white;
+font-size: 20px;
+font-weight: 300;
+margin-bottom: 15px;}
+
+.btn,.contacto-textarea{padding: 10px 20px;
+border-radius: 25px;
+margin-bottom: 20px;
+background-color:white;
+border: 2px solid;
+color: rgb(47, 135, 235);
+outline: none;}
+
+label{ display: flex;
+color: white;
+font-size: 16px;
+;text-align: center;
+margin-left: 100px;
+margin-right: 100px}
 
 
 
+.btn {display: flex;
+  font-size: 16px;
+border: 0;
+border-radius: 25px;
+background-color: white;
+}
 
+@media screen and (max-width: 1199px) {.qr {
+      max-width: 150px;
+    } }
+  
+.titulo-pisos,
+    .col {
+      
 
+  margin-left: 5%;
+    }
+  
+  
+  @media screen and (max-width: 768px) {
+    .contenedor-mapa {display: flex;
+      ;
+    }
+    
+    
+    .consulta {display: flex;
+    justify-content: center;
+  flex-direction: column;
+  margin-right:300px;
+  margin-left: 50px;}
+
+    .carousel-inner{display: flex;
+      flex-direction: column;
+      align-items: center}
+  
+    .titulo-pisos,
+    .col {
+      margin-left: 0;}
+  
+    .carousel-control-prev,
+    .carousel-control-next {
+      margin-bottom:100px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+  
+  
+  
+  
+  
 
 
 
