--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -78,7 +78,253 @@ margin-top: auto;}
 .titulo-destacados{ text-align: center;}
 
 
-.card-group{margin-left: 100px;}
-main {
-align-content: center;
-}
+.carousel-inner {
+    border: 1px solid none;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  
+  .carousel-item img {
+    margin-left: 520px;
+    margin-right: 400px;
+    margin-bottom: 100px;
+    width: auto;
+    height: 600px;
+    object-fit: cover;
+    display: flex;
+  }
+  
+  .carousel-control-prev,
+  .carousel-control-next {
+    font-size: 20px;
+    color: #0f0f0f;
+    background-color: #0c0c0c;
+    border: none;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 350px;
+    margin-right: 250px;
+    margin-top: 250px;
+  }
+  
+  .carousel-control-prev:hover,
+  .carousel-control-next:hover {
+    background-color: none;
+    margin-bottom: 500px;
+  }
+  
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+    background-color: transparent;
+    border: none;
+  }
+  
+  .carousel-control-prev-icon::before,
+  .carousel-control-next-icon::before {
+    font-size: 30px;
+  }
+  
+  body {
+    background-color: #606060;
+    font-family: "roboto slab";
+  }
+  
+  h3 {
+    margin-left: 100px;
+  }
+  
+  /* header */
+  @media (min-width: 768px) {
+    .bloque1 {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+    .logo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .prueba {
+      display: grid;
+      grid-template-columns: auto 300px;
+      grid-template-areas: "main aside";
+    }
+    main {
+      grid-area: main;
+    }
+    aside {
+      grid-area: aside;
+    }
+  }
+  @media (max-width: 1023px) {
+    .bloque1 {
+      display: grid;
+      grid-template-columns: 1fr;
+      justify-items: center;
+      gap: 10px;
+    }
+  }
+  .titulo {
+    display: flex;
+    align-self: self-start;
+    margin-top: 50px;
+    margin-left: 100px;
+    font-size: 3rem;
+  }
+  
+  .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .buscador {
+    display: flex;
+    gap: 5px;
+    align-self: self-start;
+    margin-top: 60px;
+    margin-left: 100px;
+  }
+  
+  .nav-list {
+    display: flex;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    grid-row: 1;
+    gap: 30px;
+    list-style-type: none;
+    margin-top: 70px;
+    border-bottom-style: solid;
+    border-top-style: solid;
+    padding: 20px;
+  }
+  
+  .nav-list a {
+    text-decoration: none;
+    color: black;
+  }
+  
+  /*body*/
+  .parrafo {
+    display: flex;
+    text-align: center;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: auto;
+  }
+  
+  .titulo-destacados {
+    text-align: center;
+  }
+  
+  .card-group {
+    margin-left: 100px;
+  }
+  
+  main {
+    align-content: center;
+  }
+  
+  .carousel-inner {
+    border: 1px solid none;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  
+  .carousel-item img {
+    margin-left: 520px;
+    margin-right: 400px;
+    margin-bottom: 100px;
+    width: auto;
+    height: 600px;
+    object-fit: cover;
+    display: flex;
+  }
+  
+  .carousel-control-prev,
+  .carousel-control-next {
+    font-size: 20px;
+    color: #0f0f0f;
+    background-color: #0c0c0c;
+    border: none;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 350px;
+    margin-right: 250px;
+    margin-top: 250px;
+  }
+  
+  .carousel-control-prev:hover,
+  .carousel-control-next:hover {
+    background-color: none;
+    margin-bottom: 500px;
+  }
+  
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+    background-color: transparent;
+    border: none;
+  }
+  
+  .carousel-control-prev-icon::before,
+  .carousel-control-next-icon::before {
+    font-size: 30px;
+  }
+  
+  .carousel-inner {
+    border: 1px solid none;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  
+  .carousel-item img {
+    margin-left: 520px;
+    margin-right: 400px;
+    margin-bottom: 100px;
+    width: auto;
+    height: 600px;
+    object-fit: cover;
+    display: flex;
+  }
+  
+  .carousel-control-prev,
+  .carousel-control-next {
+    font-size: 20px;
+    color: #0f0f0f;
+    background-color: #0c0c0c;
+    border: none;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 350px;
+    margin-right: 250px;
+    margin-top: 250px;
+  }
+  
+  .carousel-control-prev:hover,
+  .carousel-control-next:hover {
+    background-color: none;
+    margin-bottom: 500px;
+  }
+  
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+    background-color: transparent;
+    border: none;
+  }
+  
+  .carousel-control-prev-icon::before,
+  .carousel-control-next-icon::before {
+    font-size: 30px;
+  }
